<resources>
    <string name="app_name">Snake Game</string>
    <string name="start_game">Start a New Game</string>
    <string name="sound">Sound</string>
    <string name="level">Level</string>
    <string name="high_score">High Score</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="description">
        The button at the right side of the screen will help
        you to move the snake to right or down side. The button
        at the left will help you to move the snake to left
        or up side.\n\n
        Or you can touch the border part of snake
        to control the game. The snake will move at the side
        you will touch.
    </string>
    <string name="about_me">Md. Asaduzzaman Arabin,\nDepartment of EEE,\n2017-18 Session,\nRajshahi University</string>
    <string name="on">On</string>
    <string name="of">Of</string>
    <string name="level_1">Level 1 :</string>
    <string name="level_2">Level 2 :</string>
    <string name="level_3">Level 3 :</string>
    <string name="my_picture">My Picture</string>
</resources>